--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Project exclude paths
 /.gradle/
+/local.properties
+*.iml
+.gradle
+/.idea/*
+.DS_Store
+/build
+/captures
+.externalNativeBuild
