Added Room and LiveData dependencies.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.incremental":"true"
+                        ]
+            }
+        }
     }
 
     buildTypes {
@@ -27,6 +35,9 @@ android {
 }
 
 dependencies {
+    def roomVersion = '2.2.5'
+    def lifecycleVersion = '2.2.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -36,4 +47,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    // Room components
+    implementation "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycleVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
 }
